
OPTION( PERTUBIS_BUILD_DOCS "Build the doxygen documentation" OFF )
IF ( PERTUBIS_BUILD_DOCS )

    CONFIGURE_FILE(${PERTUBIS_SOURCE_DIR}/doc/Doxyfile.in
        ${PERTUBIS_BINARY_DIR}/doc/Doxyfile)

    FIND_PACKAGE(Doxygen REQUIRED)

    FILE(MAKE_DIRECTORY ${PERTUBIS_BINARY_DIR}/doc/html)

    ADD_CUSTOM_TARGET(documentation ALL)

    ADD_CUSTOM_COMMAND(TARGET documentation
        POST_BUILD
        COMMAND ${DOXYGEN_EXECUTABLE} ARGS ${PERTUBIS_BINARY_DIR}/doc/Doxyfile
        VERBATIM)

    INSTALL(DIRECTORY ${PERTUBIS_BINARY_DIR}/doc/html DESTINATION ${PERTUBIS_DOC_PATH} COMPONENT docs)
ENDIF ( PERTUBIS_BUILD_DOCS )
